--- a/styles.css
+++ b/styles.css
@@ -8,17 +8,18 @@ body {
 header.jumbotron {
     margin-bottom: 0;
     background-color: #386FA4 !important;
-
 }
-
 
 /*navbar*/
 .navbar {
     background-color: #133C55 !important;
     color: white !important;
+    
 }
 .navbar-light .navbar-nav .nav-link {
     color: #91E5F6 !important;
+    margin-block: 5px;
+    border-radius: 20%;
 }
 /* Cambiar el color del enlace activo en la navbar */
 .navbar-nav .nav-link.active {
@@ -38,5 +39,10 @@ footer {
 
 main {
     flex: 1;
+}
+
+.navbar-nav .nav-link:hover {
+    color: #fff !important; /* Cambia el color del texto al pasar el ratón */
+    background-color: #59A5D8; /* Cambia el color de fondo al pasar el ratón */
 }
 
